@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare pretend setup test
+DEPEND=|| ( >=dev-lang/python-2.7.5-r2:2.7 ) !!net-libs/nodejs >=dev-libs/openssl-1.0.1j icu? ( dev-libs/icu ) >=net-libs/http-parser-2.4.1 >=dev-libs/libuv-1.2.1
+DESCRIPTION=An npm compatible platform originally based on node.js
+EAPI=5
+HOMEPAGE=http://iojs.org/
+IUSE=icu +npm snapshot
+KEYWORDS=~amd64 ~arm ~x86 ~x64-macos
+LICENSE=Apache-1.1 Apache-2.0 BSD BSD-2 MIT
+RDEPEND=!!net-libs/nodejs >=dev-libs/openssl-1.0.1j
+RESTRICT=test
+SLOT=0
+SRC_URI=http://iojs.org/dist/v1.0.4/iojs-v1.0.4.tar.xz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	dfe060cb70d89757fde5c1ff8405e950	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	7d5f4ad9ba85664d8c5f56041a70f4c3	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=15bbf1e337147a7c1a596433fa9ccbbd
