@@ -1,0 +1,4 @@
+DIST iojs-v1.0.4.tar.xz 12284732 SHA256 c902f5abbd59c56346680f0b4a71056c51610847b9576acf83a9c210bf664e98 SHA512 0e3d4f66fc7f64e09f999b1fdb7bbbfe80a5cfd0396ec718bf166ae44bcb27eebf5b59c3cd4a74f050b59ee529678b1bdef1c3b9d71534c8ac0ab8caf8472021 WHIRLPOOL cfd766a513877f6ccfddc4e1eb4e0be4fa987dbac7c7c8159f70556b72a01b26fdd7d92be3fcb7efc37691b6808c8d570199741f01f95df77dd9aa95312bac9e
+EBUILD iojs-1.0.4.ebuild 2943 SHA256 419f60999115bcba3c4022d01fb5d3e3408e4fd7026cad9683424229d4567915 SHA512 8b9bd63c3e1eb28dcdd903cbfb5d64d9bd756efd5b839824b237b8545d5bd9d2c859e694a60b143490a4b70d32c83f297f1f4c881e1417fa9fd94b3cb6884de2 WHIRLPOOL 201359966ca2300fc950bb0e4e1e9b4427cbbb283495d6b5cfb9fbbc7c47bb0aa65bf22e6302f758ab925b1cb39e001f9c00c6e37cf803f1e83f0e7516f54e29
+MISC ChangeLog 354 SHA256 c794e7cc7cfe88b5108a62131d719cbbf33bf1bed7d5e765559bd30771e43399 SHA512 46f4ca26c1adf03d7a75335cf85ab4c79ebc9f82781d1813e2e2bb947760bbf295590b920310fb91c7c05320a693803b115c7d0635f13f40f8e5a2df8e1f0964 WHIRLPOOL 13e6dd7a3d3a17b42cc0c9643f3671e5e3ef6c7b1075d702b8d7136b496f95814d4fbf466de613afcc324c118f42f55082b5cc435d221000e74b4deba3a2136d
+MISC metadata.xml 545 SHA256 ea98b41b3fe8288a7b38649098871f33c897916aaa34c718f8b849bc35d15c12 SHA512 f32b1eced5dada7827c10bb7b59986400d8dce58dc8c2c0b03d3acd0886b539d2c0afa7956c8a0d1b1ae1894eae31c520368c524bd4c7fb5930180fc8bc4b035 WHIRLPOOL f3fe5d3c70386787eae1cc856f7a57d775738096777074b50678f45ed7e5c9c2575c21a452e75d9a5d06245c85c17434593a7b3d0b5f0c4ec932fd3c7a8b84aa
