@@ -1,0 +1,17 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+	<herd>proxy-maintainers</herd>
+        <maintainer>
+                <email>bugs@bergstroem.nu</email>
+                <name>Johan Bergstroem</name>
+        </maintainer>
+	<maintainer>
+		<email>patrick@gentoo.org</email>
+		<name>Patrick Lauer</name>
+	</maintainer>
+	<use>
+	<flag name='npm'>Enable NPM package manager</flag>
+	<flag name='snapshot'>Enable snapshot creation for faster startup</flag>
+	</use>
+</pkgmetadata>
