@@ -1,0 +1,9 @@
+# ChangeLog for net-libs/iojs
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/iojs/ChangeLog,v 1.1 2015/01/27 03:01:33 patrick Exp $
+
+*iojs-1.0.4 (27 Jan 2015)
+
+  27 Jan 2015; Patrick Lauer <patrick@gentoo.org> +iojs-1.0.4.ebuild,
+  +metadata.xml:
+  Initial import, ebuild by jbergstroem
